Responsive dashboard citizenship modules *fix*
Upon debugging with Chrome Developer Tools, device browsers seem to not recalculate the hardcoded html height/width, so a fall-back CSS solution was provided using max-widths and min-widths to prevent the canvas from becoming too big or too small on devices.

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -44,3 +44,9 @@
     }
 }
 
+.citizenship .box canvas{
+    max-width:60px !important;
+    height:auto !important;
+    min-width:20px !important;
+}
+
